--- a/index.html
+++ b/index.html
@@ -46,17 +46,19 @@
             <div class="project-text">
                 <h3 class="project-title">Glucofit</h3>
                 <div class="tabs">
-                    <a href="">Project Management</a>
-                </div>
-                <div class="tabs">
-                    <a href="">UI/UX Design</a>
+                    <div class="role">
+                        <a href="">Project Management</a>
+                    </div>
+                    <div class="role">
+                        <a href="">UI/UX Design</a>
+                    </div>
                 </div>
                 <p class="product-description">Glucofit is a mobile app for people who may be prediabetic or already diabetic to help them manage their blood sugar level through automated glucose logging and personalized insights on food and lifestyle.</p>
                 <button class="view-project">View Project</button>
             </div>
 
             <div class="product-image">
-                <img src="../images/glucofit-logo.png" alt="glucofit-logo">
+                    <img src="../images/glucofit-logo.png" alt="glucofit-logo">
             </div>
         </section>
 
@@ -64,17 +66,19 @@
             <div class="project-text">
                 <h3 class="project-title">CocoTrade</h3>
                 <div class="tabs">
-                    <a href="">Product Design</a>
-                </div>
-                <div class="tabs">
-                    <a href="">UI/UX Design</a>
+                    <div class="role">
+                        <a href="">Product Design</a>
+                    </div>
+                    <div class="role">
+                        <a href="">UI/UX Design</a>
+                    </div>
                 </div>
                 <p class="product-description">The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. </p>
                 <button class="view-project">View Project</button>
             </div>
 
             <div class="product-image">
-                <img src="" alt="cocotrade-logo">
+                <img src="../images/cocotrade-logo.png" alt="cocotrade-logo">
             </div>
         </section>
 
@@ -82,17 +86,19 @@
             <div class="project-text">
                 <h3 class="project-title">StashAway</h3>
                 <div class="tabs">
-                    <a href="">Product Design</a>
-                </div>
-                <div class="tabs">
-                    <a href="">UI/UX Design</a>
+                    <div class="role">
+                        <a href="">Product Design</a>
+                    </div>
+                    <div class="role">
+                        <a href="">UI/UX Design</a>
+                    </div>
                 </div>
                 <p class="product-description">The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. </p>
                 <button class="view-project">View Project</button>
             </div>
 
             <div class="product-image">
-                <img src="" alt="stashaway-logo">
+                <img src="../images/stashaway-logo.png" alt="stashaway-logo">
             </div>
         </section>
 
