--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
         <div class="hero-content">
             <h2 class="name">Jennifer Mallari</h2>
-            <p class="role">UI/UX Designer</p>
-            <p>based in Vancouver, BC</p>
-            <p>I'm a UI/UX Designer with 5 years of experience controlling satellites. When I'm not designing, you'll find me taking photos with my film camera or playing my ukulele!</p>
+            <p class="bio">UI/UX Designer with Satellite Operations background.</p>
+            <p class="location">based in Vancouver, BC</p>
         </div>
     </header>
 
@@ -127,9 +126,9 @@
             </div>
         </div>
 
-        <div>
+        <!-- <div class="copyright">
             <p>All rights reserved. Jennifer Mallari</p>
-        </div>
+        </div> -->
     </footer>
     
 </body>
