--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="product-image">
-                    <img src="../images/glucofit-logo.png" alt="glucofit-logo">
+                    <img src="../images/cocotrade-logo.png" alt="glucofit-logo">
             </div>
         </section>
 
@@ -77,7 +77,7 @@
             </div>
 
             <div class="product-image">
-                <img src="../images/cocotrade-logo.png" alt="cocotrade-logo">
+                <img src="../images/glucofit-logo.png" alt="cocotrade-logo">
             </div>
         </section>
 
