revert img file path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jennifer Mallari</title>
-    <link rel="icon" type="image/png" href="/public/images/penguin-logo.png">
+    <link rel="icon" type="image/png" href="/images/penguin-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <header class="hero">
         
         <div class="navigation">
-            <h1 class="penguin-logo"><img src="/public/images/penguin-logo.png" alt="jennifermallari logo"></h1>
+            <h1 class="penguin-logo"><img src="/images/penguin-logo.png" alt="jennifermallari logo"></h1>
 
         
             <nav class="contents">
@@ -30,7 +30,7 @@
         </div>
 
         <video class="hero-video" autoplay muted loop>
-            <source src="/public/images/penguin-background.mp4" type="video/mp4">
+            <source src="/images/penguin-background.mp4" type="video/mp4">
         </video>
 
         <div class="hero-content">
@@ -57,7 +57,7 @@
             </div>
 
             <div class="product-image">
-                    <img src="/public/images/glucofit-logo.png" alt="glucofit-logo">
+                    <img src="/images/glucofit-logo.png" alt="glucofit-logo">
             </div>
         </section>
 
@@ -77,7 +77,7 @@
             </div>
 
             <div class="product-image">
-                <img src="/public/images/cocotrade-logo.png" alt="cocotrade-logo">
+                <img src="/images/cocotrade-logo.png" alt="cocotrade-logo">
             </div>
         </section>
 
@@ -97,7 +97,7 @@
             </div>
 
             <div class="product-image">
-                <img src="/public/images/stashaway-logo.png" alt="stashaway-logo">
+                <img src="/images/stashaway-logo.png" alt="stashaway-logo">
             </div>
         </section>
 
