added projects page

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header class="hero">
         
         <div class="navigation">
-            <h1 class="penguin-logo"><img src="../images/penguin-logo.png" alt="jennifermallari logo"></h1>
+            <h1 class="penguin-logo"><a href="index.html"><img src="../images/penguin-logo.png" alt="jennifermallari logo"></a></h1>
 
         
             <nav class="contents">
                 <ul>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#about">About</a></li>
                 </ul>
