removed gallery page

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
             <nav class="projects-nav">
                 <ul>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
+                    <!-- <li><a href="#gallery">Gallery</a></li> -->
                     <li><a href="#about">About</a></li>
                 </ul>
             </nav>
@@ -33,41 +33,43 @@
     </header>
 
     <main class="project-items">
-        <div class="product-image">
-            <a href="../projects/glucofit.html">
+        <a class="project-link" href="../projects/glucofit.html">
+            <div class="project-image">
                 <img src="../images/glucofit-logo.png" alt="glucofit-logo">
-            </a>
-        </div>
+            </div>
+        </a>
 
-        <div class="product-image">
-            <a href="../projects/cocotrade.html">
+
+        <a class="project-link" href="../projects/cocotrade.html">
+            <div class="project-image">
                 <img src="../images/cocotrade-logo.png" alt="cocotrade-logo">
-            </a>
-        </div>
+            </div>
+        </a>
 
-        <div class="product-image">
-            <a href="stashaway.html">
+        <a class="project-link" href="stashaway.html">
+            <div class="project-image">
                 <img src="../images/stashaway-logo.png" alt="stashaway-logo">
-            </a>
-        </div>
+            </div>
+        </a>
 
-        <div class="product-image">
-            <a href="">
-                <img src="../images/earnest-logo.png" alt="stashaway-logo">
-            </a>
-        </div>
-
-        <div class="product-image">
-            <a href="">
-                <img src="../images/breka-logo.png" alt="stashaway-logo">
-            </a>
-        </div>
-
-        <div class="product-image">
-            <a href="">
+        <a class="project-link" href="../projects/penguin.html">
+            <div class="project-image">
                 <img src="../images/penguin-logo.png" alt="penguin-logo">
-            </a>
-        </div>
+            </div>
+        </a>
+
+        <a class="project-link" href="">
+            <div class="project-image">
+                <img src="../images/earnest-logo.png" alt="stashaway-logo">
+            </div>
+        </a>
+
+        <a class="project-link" href="">
+            <div class="project-image">
+                <img src="../images/breka-logo.png" alt="stashaway-logo">
+            </div>
+        </a>
+
         
     </main>
 
