added project items pages

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
             <h2 class="name">Jennifer Mallari</h2>
             <p class="bio">UI/UX Designer with Satellite Operations background.</p>
             <p class="location">based in Vancouver, BC</p>
+
+            <button class="scroll-down">Scroll Down</button>
         </div>
     </header>
 
     <main class="homepage">
-        <section class="majors">
+        <section id="next-section" class="majors">
             <div class="project-text">
                 <h3 class="project-title">Glucofit</h3>
                 <div class="tagline">
