--- a/projects/cocotrade.html
+++ b/projects/cocotrade.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="project-items.css">
+    <link rel="stylesheet" href="../project-items.css">
 </head>
 <body>
 
-    <header>
+    <heade class="cover">
         <div class="navigation">
             <h1 class="penguin-logo">
                 <a href="index.html">
@@ -25,12 +25,18 @@
             <nav class="projects-nav">
                 <ul>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
+                    <!-- <li><a href="#gallery">Gallery</a></li> -->
                     <li><a href="#about">About</a></li>
                 </ul>
             </nav>
         </div>
+
+        <div class="cover-image">
+            <img src="../images/cocotrade-cover.jpg" alt="">
+        </div>
     </header>
+
+
     
 </body>
 </html>
