update homepage grid view

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
             </div>
         </a>
 
-        <a class="project-link" href="stashaway.html">
+        <a class="project-link" href="../projects/stashaway.html">
             <div class="project-image">
                 <img src="../images/stashaway-logo.png" alt="stashaway-logo">
             </div>
