--- a/projects/glucofit.html
+++ b/projects/glucofit.html
@@ -13,10 +13,11 @@
 </head>
 <body>
 
-    <heade class="cover">
+    <header class="cover">
+
         <div class="navigation">
             <h1 class="penguin-logo">
-                <a href="index.html">
+                <a href="../index.html">
                 <img src="../images/penguin-logo.png" alt="jennifermallari logo">
                 </a>
             </h1>
@@ -34,4 +35,79 @@
         <div class="cover-image">
             <img src="../images/glucofit-cover.jpg" alt="">
         </div>
+
+        <div class="cover-content">
+            <div class="cover-logo">
+                <img src="../images/glucofit-cover-logo.png" alt="">
+            </div>
+
+            <div class="cover-subtitle">
+                <h3>Role</h3>
+            </div>
+
+            <div class="cover-details">
+                <p>Project Managar | UI/UX Designer</p>
+            </div>
+
+            <div class="cover-subtitle">
+                <h3>Duration</h3>
+            </div>
+
+            <div class="cover-details">
+                <p>12 Weeks</p>
+            </div>
+
+            <div class="cover-subtitle">
+                <h3>Tools</h3>
+            </div>
+
+            <div class="cover-details">
+                <p>Figma</p>
+            </div>
+
+            <div class="cover-subtitle">
+                <h3>Team</h3>
+            </div>
+
+            <div class="cover-details">
+                <p>4 Designers | 4 Developers</p>
+            </div>
+        </div>
     </header>
+
+    <main>
+
+    </main>
+
+
+
+    <footer>
+        <div class="connect-wrapper">
+            <div class="connect">
+                <h3 class="contact">Let's connect!</h3>
+                <div class="links">
+                    <a href="https://www.linkedin.com/in/jennifergmallari/">
+                        <i aria-hidden="true" class="fa-brands fa-linkedin" title="Linkedin"></i>
+                            <span class="fa-sr-only">Linkedin</span>
+                    </a>
+                    <a href="">Resume</a>
+                </div>
+            </div>
+
+            <div class="connect">
+                <h3 class="contact">Contact Me</h3>
+                <div class="links">
+                    <a href="">jennifergmallari@gmail.com</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="copyright">
+            <p>All rights reserved. Jennifer Mallari</p>
+        </div> -->
+    </footer>
+
+
+    
+</body>
+</html>
