--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </nav>
         </div>
 
-        <video class="hero-video" autoplay muted loop>
+        <video class="hero-video" autoplay muted loop playsinline>
             <source src="../images/penguin-background.mp4" type="video/mp4">
         </video>
 
