--- a/projects/glucofit.html
+++ b/projects/glucofit.html
@@ -25,9 +25,9 @@
         
             <nav class="projects-nav">
                 <ul>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="../projects.html">Projects</a></li>
                     <!-- <li><a href="#gallery">Gallery</a></li> -->
-                    <li><a href="#about">About</a></li>
+                    <li><a href="../about">About</a></li>
                 </ul>
             </nav>
         </div>
