--- a/projects/glucofit.html
+++ b/projects/glucofit.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li><a href="../projects.html">Projects</a></li>
                     <!-- <li><a href="#gallery">Gallery</a></li> -->
-                    <li><a href="../about">About</a></li>
+                    <li><a href="../about.html">About</a></li>
                 </ul>
             </nav>
         </div>
