--- a/projects.html
+++ b/projects.html
@@ -52,21 +52,21 @@
             </div>
         </a>
 
-        <a class="project-link" href="../projects/penguin.html">
+        <a class="project-link" href="#">
             <div class="project-image">
                 <img src="../images/penguin-logo.png" alt="penguin-logo">
             </div>
         </a>
 
-        <a class="project-link" href="">
+        <a class="project-link" href="#">
             <div class="project-image">
-                <img src="../images/earnest-logo.png" alt="stashaway-logo">
+                <img src="../images/earnest-logo.png" alt="earnest-logo">
             </div>
         </a>
 
-        <a class="project-link" href="">
+        <a class="project-link" href="#">
             <div class="project-image">
-                <img src="../images/breka-logo.png" alt="stashaway-logo">
+                <img src="../images/breka-logo.png" alt="breka-logo">
             </div>
         </a>
 
