added layout for projects

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             <p class="bio">UI/UX Designer with Satellite Operations background.</p>
             <p class="location">based in Vancouver, BC</p>
 
-            <button class="scroll-down" id="scroll-down-btn"><i class="fa-solid fa-chevron-down"></i></button>
+            <button class="scroll-down" id="scroll-down-btn">
+                <i class="fa-solid fa-chevron-down"></i>
+            </button>
         </div>
     </header>
 
