--- a/projects/glucofit.html
+++ b/projects/glucofit.html
@@ -75,7 +75,74 @@
         </div>
     </header>
 
-    <main>
+    <main class="main-content">
+        <div class="side-nav">
+            <div class="nav-wrapper">
+                <h4 class="title-nav">Overview</h4>
+                <nav class="container-nav">
+                    <ul>
+                        <li><a href="#problem">Problem</a></li>
+                        <li><a href="#solution">Solution</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="nav-wrapper">
+                <h4 class="title-nav">Process</h4>
+                <nav class="container-nav">
+                    <ul>
+                        <li><a href="">Research</a></li>
+                        <li><a href="">Ideation</a></li>
+                        <li><a href="">Wireframing</a></li>
+                        <li><a href="">Branding</a></li>
+                        <li><a href="">Mockup</a></li>
+                        <li><a href="">Takeaways</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="right-nav">
+            <div class="project-content">
+                <h3>Overview</h3>
+                <h4>Overview</h4>
+                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            </div>
+
+            <div id="problem" class="project-content">
+                <h4>Problem</h4>
+                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            </div>
+
+            <div id="Solution" class="project-content">
+                <h4>Overview</h4>
+                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            </div>
+
+            <div id="overview" class="project-content">
+                <h4>Overview</h4>
+                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            </div>
+
+            <div id="overview" class="project-content">
+                <h4>Overview</h4>
+                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            </div>
+
+            <div id="overview" class="project-content">
+                <h4>Overview</h4>
+                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            </div>
+
+            <div id="overview" class="project-content">
+                <h4>Overview</h4>
+                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            </div>
+
+            <div id="overview" class="project-content">
+                <h4>Overview</h4>
+                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            </div>
+        </div>
 
     </main>
 
