added cocotrade contents and about

--- a/projects/cocotrade.html
+++ b/projects/cocotrade.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="cover-details">
-                <p>Project Manager | UI/UX Designer</p>
+                <p>Lead UI/UX Designer</p>
             </div>
 
             <div class="cover-subtitle">
@@ -91,12 +91,11 @@
                 <h4 class="title-nav">Process</h4>
                 <nav class="container-nav">
                     <ul>
-                        <li><a href="">Research</a></li>
-                        <li><a href="">Ideation</a></li>
-                        <li><a href="">Wireframing</a></li>
-                        <li><a href="">Branding</a></li>
-                        <li><a href="">Mockup</a></li>
-                        <li><a href="">Takeaways</a></li>
+                        <li><a href="#research">Research</a></li>
+                        <li><a href="#wireframe">Wireframing</a></li>
+                        <li><a href="#design">Design System</a></li>
+                        <li><a href="#mockup">Mockup</a></li>
+                        <li><a href="#takeaways">Takeaways</a></li>
                     </ul>
                 </nav>
             </div>
@@ -105,8 +104,7 @@
         <div class="right-nav">
             <div class="project-content">
                 <h3>Overview</h3>
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                <p class="overview">CocoTrade is an innovative web app designed to modernize and streamline the operations of small and medium-sized copra trading businesses, particularly in Southeast Asia.</p>
             </div>
 
             <div id="problem" class="project-content">
@@ -114,34 +112,65 @@
                 <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
             </div>
 
-            <div id="Solution" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            <div id="solution" class="project-content">
+                <h4>Solution</h4>
+                <p>CocoTrade is an all-in-one web app that offers a paperless inventory and sales management system to copra traders. With CocoTrade, business owners can easily view their monthly and daily transactions. Additionally, they can set their own copra prices based on the world market price and keep track of their purchases, observing trends from daily to yearly.</p>
             </div>
 
-            <div id="overview" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            <div id="research" class="project-content">
+                <h4>Research</h4>
+                <p>The research includes a competitive analysis of existing enterprise solutions such as SAP and Arctic Data.</p>
+                <p>SAP offers extensive features that cater to diverse industries, but its complexity and high customization costs make it less viable for smaller-scale businesses.</p>
+                <p>Arctic Data, while more customizable, also demands intensive resources and specialized roles, making it similarly impractical for small family-run enterprises like copra trading.</p>
+                <p>This highlights the need for a lightweight, user-friendly solution like CocoTrade, designed specifically to meet the unique needs of copra traders in Southeast Asia, focusing on accessibility, scalability, and efficiency.</p>
+                
+                <div class="research-section">
+                    <div class="competitive-analysis">
+                        <h4 class="research-section">Competitive Analysis</h4>
+                        <img src="../images/cocotrade-competitive-analysis.jpg" alt="">
+                    </div>
+
+                    <div class="user-persona">
+                        <h4 class="research-section">User Personas</h4>
+                        <img src="../images/cocotrade-persona-1.jpg" alt="">
+                        <img src="../images/cocotrade-persona-2.jpg" alt="">
+                    </div>
+                </div>
+
             </div>
 
-            <div id="overview" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            <div id="wireframe" class="project-content">
+                <h4>Wireframes</h4>
+                <p></p>
+                <div class="container-wireframe">
+                    <img src="../images/cocotrade-wireframes.png" alt="">
+                </div>
             </div>
 
-            <div id="overview" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            <div id="design" class="project-content">
+                <h4>Design System</h4>
+                <p>The logo of Cocotrade is a representation of palm leaves, which symbolizes sustainability and the tree where copra is from, with the bar charts representing the platform’s data-dhriven insights and analytics </p>
+
+                <div class="container-design">
+                    <img src="../images/cocotrade-branding-logo.png" alt="">
+                    <img src="../images/cocotrade-typography.png" alt="">
+                    <img src="../images/cocotrade-components-1.png" alt="">
+                    <img src="../images/cocotrade-components-2.png" alt="">
+                </div>
+
             </div>
 
-            <div id="overview" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            <div id="mockup" class="project-content">
+                <h4>Mockups</h4>
+                <p></p>
+                <div class="container-mockups">
+                    <img src="../images/cocotrade-mockups.png" alt="">
+                </div>
             </div>
 
-            <div id="overview" class="project-content">
-                <h4>Overview</h4>
-                <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+            <div id="takeaways" class="project-content">
+                <h4>Takeaways</h4>
+                <p>As the lead UI/UX designer, I focused on crafting the inventory and dashboard pages through multiple iterations, ensuring they were intuitive and user-friendly. Recognizing these screens as the most frequently used by our users, I collaborated closely with my co-designers, actively seeking and incorporating their feedback to refine the design. This iterative process taught me the importance of teamwork and user-centered design in delivering interfaces that balance functionality with ease of use.</p>
             </div>
         </div>
 
