--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <a href="">UI/UX Design</a>
                     </div>
                 </div>
-                <p class="product-description">The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. </p>
+                <p class="product-description">CocoTrade is a web app designed to modernize and streamline the operations of small and medium-sized copra trading businesses, particularly in Southeast Asia.</p>
                 
                 <button class="view-project">
                     <a href="../projects/cocotrade.html">View Project</a>
@@ -128,7 +128,7 @@
                         <a href="">UI/UX Design</a>
                     </div>
                 </div>
-                <p class="product-description">The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. </p>
+                <p class="product-description">An app that lets you easily find, book, and manage self-storage units, with the added convenience of seamless pickup and delivery services for your items.</p>
                 
                 <button class="view-project">
                     <a href="../projects/stashaway.html">View Project</a>
