--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="hero-content">
             <h2 class="name">Jennifer Mallari</h2>
-            <p class="bio">A UI/UX designer with 5 years of experience in satellite operations, driven about combining design skills and technical knowledge to create human-centered solutions that connect complex systems with user needs.</p>
+            <p class="bio">A product designer with 5 years of experience in satellite operations, driven in combining design skills and technical knowledge to create human-centered solutions that connect complex systems with user needs.</p>
             <p class="location">based in Vancouver, BC</p>
 
             <button class="scroll-down" id="scroll-down-btn">
