--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <p class="product-description">Glucofit is a mobile app for people with diabetes to help them monitor their blood sugar level through automated glucose logging and personalized insights and gamification to keep users motivated.</p>
                 
-                <button class="view-project">
+                <button class="view-project" id="glucofit-page-btn">
                     <a href="../projects/glucofit.html">View Project</a>
                 </button>
             </div>
@@ -151,7 +151,7 @@
                         <i aria-hidden="true" title="Linkedin"></i>
                             <span>Linkedin</span>
                     </a>
-                    <a href="">Resume</a>
+                    <a href="../docs/mallarijenniferg-resume.pdf" target="_blank" download>Resume</a>
                 </div>
             </div>
 
