--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                         <i aria-hidden="true" title="Linkedin"></i>
                             <span>Linkedin</span>
                     </a>
-                    <a href="">Resume</a>
+                    <a href="../docs/mallarijenniferg-resume.pdf" target="_blank" download>Resume</a>
                 </div>
             </div>
 
