--- a/projects/stashaway.html
+++ b/projects/stashaway.html
@@ -157,7 +157,7 @@
                         <i aria-hidden="true" class="fa-brands fa-linkedin" title="Linkedin"></i>
                             <span class="fa-sr-only">Linkedin</span>
                     </a>
-                    <a href="">Resume</a>
+                    <a href="../docs/mallarijenniferg-resume.pdf" target="_blank" download>Resume</a>
                 </div>
             </div>
 
