update resume and email

--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
                         <i aria-hidden="true" title="Linkedin"></i>
                             <span>Linkedin</span>
                     </a>
-                    <a href="../docs/mallarijenniferg-resume.pdf" target="_blank" download>Resume</a>
+                    <a href="../docs/mallarijenniferg-resume.pdf" target="_blank">Resume</a>
                 </div>
             </div>
 
             <div class="connect">
                 <h3 class="contact">Contact Me</h3>
                 <div class="links">
-                    <a href="">jennifergmallari@gmail.com</a>
+                    <a href="mailto:jennifergmallari@gmail.com">jennifergmallari@gmail.com</a>
                 </div>
             </div>
         </div>
