--- a/projects/cocotrade.html
+++ b/projects/cocotrade.html
@@ -187,14 +187,14 @@
                         <i aria-hidden="true" class="fa-brands fa-linkedin" title="Linkedin"></i>
                             <span class="fa-sr-only">Linkedin</span>
                     </a>
-                    <a href="../docs/mallarijenniferg-resume.pdf">Resume</a>
+                    <a href="../docs/mallarijenniferg-resume.pdf" target="_blank" download>Resume</a>
                 </div>
             </div>
 
             <div class="connect">
                 <h3 class="contact">Contact Me</h3>
                 <div class="links">
-                    <a href="">jennifergmallari@gmail.com</a>
+                    <a href="mailto:jennifergmallari@gmail.com">jennifergmallari@gmail.com</a>
                 </div>
             </div>
         </div>
