--- a/projects/stashaway.html
+++ b/projects/stashaway.html
@@ -164,7 +164,7 @@
             <div class="connect">
                 <h3 class="contact">Contact Me</h3>
                 <div class="links">
-                    <a href="">jennifergmallari@gmail.com</a>
+                    <a href="mailto:jennifergmallari@gmail.com">jennifergmallari@gmail.com</a>
                 </div>
             </div>
         </div>
