update typeface and added contact nav

--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/zrf4hff.css">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="projects.css">
 </head>
@@ -27,6 +28,7 @@
                     <li><a href="#projects">Projects</a></li>
                     <!-- <li><a href="#gallery">Gallery</a></li> -->
                     <li><a href="about.html">About</a></li>
+                    <li><a href="mailto:jennifergmallari@gmail.com">Contact</a></li>
                 </ul>
             </nav>
         </div>
