--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b479c2d499.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/zrf4hff.css">
     <script src="function.js" defer></script>
     <link rel="stylesheet" href="about.css">
     
@@ -32,6 +33,7 @@
                         <li><a href="../projects.html">Projects</a></li>
                         <!-- <li><a href="#gallery">Gallery</a></li> -->
                         <li><a href="../about.html">About</a></li>
+                        <li><a href="mailto:jennifergmallari@gmail.com">Contact</a></li>
                     </ul>
                 </nav>
             </div>
