--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,35 @@
                 </ul>
             </nav>
         </div>
+
+
+        <div class="project-categories">
+            <nav class="categories">
+                <ul>
+                    <li>
+                        <button>
+                            <a href="#all">
+                                All
+                            </a>
+                        </button>
+                    </li>
+                    <li>
+                        <button>
+                            <a href="#uiuxdesign">
+                                UI/UX Design
+                            </a>
+                        </button>
+                    </li>
+                    <li>
+                        <button>
+                            <a href="#designstudy">
+                                Design Study
+                            </a>
+                        </button>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main class="project-items">
